--- a/Words/Words/Words.csproj
+++ b/Words/Words/Words.csproj
@@ -5,4 +5,17 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="wordLists\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="wordLists\WordList-5k.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="wordLists\WordList.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
